# playwright-ui-api-automation

./: .flake8  .gitignore  .gitkeep  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: allure_reporting.mdc  architecture.mdc  ci_cd.mdc  code_maintenance.mdc  code_quality.mdc  config_env.mdc  file_structure.mdc  performance_security.mdc  testing.mdc
.github/workflows/: api-tests.yml  ci.yml  comprehensive-tests.yml  smoke-tests.yml  ui-tests.yml
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt
allure-report/history/: duration-trend.json  history.json
allure-report/widgets/: behaviors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
allure-results/: 04dba757-bdda-435d-b1ef-33b816bcee7d-container.json  04fb3b93-0516-4d44-be44-5348c7cfbf36-container.json  0b2e1938-3aa1-4222-a4d5-c9b9c2cb233d-container.json  12080a03-ee50-47c0-9152-91acec6d7eaa-container.json  1284500e-8a41-4098-8b5b-7c1dc360f790-container.json  1344dd11-b6c7-405c-bd09-609ff34fb22b-container.json  1b1626e7-fca6-4771-bacc-4f2196664d7e-attachment.txt  1c17fd8c-adf7-47b0-88e9-ba8b07914b15-container.json  1d7d0d87-22b2-465d-a141-62a5a52981c6-container.json  1e3794a5-d2d9-4a2b-8bd7-a501f68ffd21-container.json  1ed2fdd4-5d8d-4ba0-82a8-57f20d8034f0-result.json  1f6c0831-cdf5-44c5-8c6c-c4e00e83ef20-result.json  222c6faf-6891-48ec-9ec7-b2964725f8f4-result.json  222d8572-03b6-4cbf-a2dd-7524771b9a9e-container.json  22965cd4-3142-4390-8aca-ca2628b7142b-container.json  25f42427-680f-4398-8967-149883e63151-container.json  27e92dd2-ba6c-4ae9-988d-538c9ca02d0c-container.json  2a9f7cb1-7af1-4bbf-a48b-7c0ae21d50a7-container.json  2e26b3d4-4750-4845-bcd0-1c26fcc66310-container.json  32ffa1a9-2225-4852-a857-ecbe03e66848-container.json  358561e1-7ffe-467a-a80b-805039081aa2-container.json  366a37b8-aeab-462b-a47b-d020518e337e-container.json  37790e9f-0f76-4b58-bdde-38723704d5e0-container.json  38bb531b-d03c-41ce-a43e-f46599d40f4c-container.json  39dfe557-4bbb-4d86-a228-636bef40d488-attachment.txt  39faef82-797a-4ece-a958-9ace0153e8cc-container.json  3a74ad33-41e6-4ac8-8a0f-b2bb0f1866d6-attachment.txt  3c4b5d87-6f78-45f6-a9e7-32746fff5686-result.json  3e8136d8-d05d-4e04-bbac-429cd80dbc8a-container.json  41db9fb7-13fe-4b07-a195-1942d8531eea-attachment.json  45603f66-6ae3-4948-97d2-e2825f76ea09-container.json  45e239e0-2131-42a5-9fc2-8cb7b831e665-attachment.txt  473cef83-a205-4a83-8552-485af1ab6cb8-container.json  48d8b8d7-7395-4454-add7-5f9750f2723f-container.json  4ca764db-10ed-4dee-98ad-2990c2b54ec7-container.json  4da92e56-c534-409e-84c9-a04bb90a2e51-container.json  528b2cf5-d053-4887-a422-5271f4176da6-result.json  530b160a-6f09-48d9-84e8-4d037cf2d5b0-attachment.txt  566aa5ac-768a-43b0-b648-a426596b4752-result.json  568d9edd-654e-4272-93e7-9eaf75741cc2-container.json  (+70 more)
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 1078d264fe171487.txt  109fcb2f94022d1c.json  10beda8f7c6b40a8.txt  10da5746c2844679.txt  114a5a1c4d0f9350.json  1167fc780d5895fc.txt  12c0c98eddb22b3e.txt  12c77ede60fd1ede.txt  12eb8c3b1efda7f0.txt  1301707fa464f4dc.json  130d9158b245575e.txt  13646e1e9a598a97.json  1408e78b399ad2a.json  14b51d9bf7c05ce1.txt  14d6cde8e23b85fb.json  14eb270b83f6c712.txt  15de43248bfb4b2a.txt  167148f879fb590c.txt  16f09fbc6ff226d3.txt  174f01485fa6706b.txt  179a351344a145e2.txt  17e5038cb12948fa.txt  183f7e5bab7804e4.json  1845c33b5c4423a4.txt  19577f6c975e776f.json  197527eedef0dbf4.txt  19a9b3ee83eef34d.txt  19b080610e754b05.txt  19d856467e54b3ca.txt  19e99a47a16deb7b.txt  1ac2edc65dfb673b.txt  1bdb235b803a5bbb.json  1c876b0dd716c955.txt  1ce9b851c63fd4f1.json  1cf3290fae5f822a.json  1d3d630f6cc4959d.txt  1d9d642c8ee7692b.txt  1db24eb796880296.txt  1e1997a05a5de701.json  1e33b958654a7f6c.txt  (+678 more)
data/test-cases/: 1074296be707728a.json  10b213b07eae9c69.json  (+407 more)
docs/: Conventions.md  SRD.md  STP.md
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
scripts/: serve-allure.sh
testdata/: api_expected.yaml  users.yaml
tests/: conftest.py
widgets/: behaviors.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+34 files in other folders)
